--- a/public/pages/Home/components/PostsContainer.scss
+++ b/public/pages/Home/components/PostsContainer.scss
@@ -9,6 +9,20 @@
 
   &__filter-col {
     grid-column: span 3 / span 3;
+    display: flex;
+    flex-direction: column;
+    & > * + * {
+      margin-left: 0;
+      margin-top: spacing(1);
+    }
+
+    @include media("md") {
+      flex-direction: row;
+      & > * + * {
+        margin-left: spacing(1);
+        margin-top: 0;
+      }
+    }
   }
 
   &__search-col {
